--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creative CV</title>
+    <title>Prathamesh Creative CV</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -205,13 +205,13 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>November 2022 - April 2023</p>
-            <div class="h5">CreativeM</div>
+            <div class="h5">KodNest technologies</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Intern</div>
-            <p>During your 6-month internship at Kodnest Technology for Java Full Stack Development, expect a comprehensive learning experience covering Java fundamentals, backend development (utilizing frameworks like Spring), frontend technologies (such as HTML, CSS, JavaScript, and popular frameworks), database management, version control with Git, deployment strategies, testing methodologies, and hands-on project work. Throughout this period, you'll receive guidance from industry professionals, engage in practical assignments to reinforce learning, and gain the skills necessary for proficient full-stack development, enabling you to build robust web applications and enter the tech industry with a well-rounded skill set.</p>
+            <p>During 6-month internship at Kodnest Technology for Java Full Stack Development, expect a comprehensive learning experience covering Java fundamentals, backend development (utilizing frameworks like Spring), frontend technologies (such as HTML, CSS, JavaScript, and popular frameworks), database management, version control with Git, deployment strategies, testing methodologies, and hands-on project work. Throughout this period, you'll receive guidance from industry professionals, engage in practical assignments to reinforce learning, and gain the skills necessary for proficient full-stack development, enabling you to build robust web applications and enter the tech industry with a well-rounded skill set.</p>
           </div>
         </div>
       </div>
