--- a/index.html
+++ b/index.html
@@ -244,18 +244,19 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
             <p>2016 - 2018</p>
-            <div class="h5">High School</div>
+            <div class="h5">PUC</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Science</div>
-            <p class="category">School of Secondary board</p>
+            <p class="category">KLES PU College</p>
             <p>In 2018, I successfully completed my Pre-University course in the field of Science at KLES PU College, Chikodi, achieving a commendable percentage of 85.66%. This program provided me with a strong foundation in scientific principles and analytical thinking, laying the groundwork for my future academic and career pursuits. During this phase of my education, I developed a deep appreciation for scientific inquiry and problem-solving, which continues to influence my approach to learning and decision-making. This educational milestone has been instrumental in shaping my academic journey and fostering a passion for the sciences, which I have carried forward into subsequent studies and endeavors.</p>
           </div>
         </div>
       </div>
     </div>
+    
   </div>
 </div>
 
